--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@webcomponents/webcomponentsjs": "^2.2.10",
     "express": "^4.17.1",
     "lit-element": "^2.1.0",
+    "npm-run-all": "^4.1.5",
     "rollup": "^1.12.3",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-node-resolve": "^5.0.0"
